HID-2060: GET /client/{id}
